<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M1K2" Id="{2074b16f-0d4c-4051-96e9-b5e1650ca1c7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    // Pitch Mechanism:
    // Currently Unused
    {attribute 'TcLinkTo' := '.diEncCnt:=TIIB[EL5042_M1K2_Pitch]^FB Inputs Channel 1^Position'}
    M1K2_Pitch : HOMS_PitchMechanism := (ReqPosLimHi := 200,
                                         ReqPosLimLo := -30,
                                         diEncPosLimHi := 10121210,
                                         diEncPosLimLo := 10004610); // Set to 50 urad before hard limits tripped during SAT
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>